# uss-nav

./: .gitignore  README.md  instruction_description.md
Elastic-Tracker/src/uav_simulator/local_sensing/: CMakeLists.txt
ws_main/src/Elastic-Tracker/src/user_command/multipoint/: CMakeLists.txt
ws_main/src/network/NetBridgeForSwarm/pic_sockets/: CMakeLists.txt  package.xml
ws_main/src/network/NetBridgeForSwarm/pic_sockets/include/: blocking_queue.h  udp.h
ws_main/src/network/NetBridgeForSwarm/pic_sockets/src/: pic_socket.cpp  udp_receiver.cpp  udp_sender.cpp
ws_main/src/network/NetBridgeForSwarm/swarm_ros_bridge/: CHANGES_LOG.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  POINT_CLOUD_FACTORY_INTEGRATION.md  package.xml
ws_main/src/network/NetBridgeForSwarm/swarm_ros_bridge/config/: default.yaml  ip_real.yaml  obj_nav_cfg.yaml
ws_main/src/network/NetBridgeForSwarm/swarm_ros_bridge/include/: bridge_factory.hpp  msgs_macro.hpp  point_cloud_process_factory.h  service_factory.h  topic_factory.h
ws_main/src/network/NetBridgeForSwarm/swarm_ros_bridge/launch/: drone.launch  drone1_test.launch  drone2_test.launch  example_bridge_drone.launch  example_bridge_station.launch  station.launch
ws_main/src/network/NetBridgeForSwarm/swarm_ros_bridge/msg/: NetworkArray.msg  NetworkInfo.msg  PtCloudCompress.msg
ws_main/src/network/NetBridgeForSwarm/swarm_ros_bridge/scripts/: create_vitrul_interface.sh  delete_virtul_interface.sh  odom_tf_publisher.py  scenegraph_msg_2_string.py
ws_main/src/network/NetBridgeForSwarm/swarm_ros_bridge/src/: bridge_factory.cpp  bridge_node_main.cpp  point_cloud_process_factory.cpp  service_factory.cpp  topic_factory.cpp
ws_main/src/network/NetBridgeForSwarm/swarm_ros_bridge/srv/: GetOdomTopic.srv  GetRecvTopic.srv
ws_main/src/network/NetBridgeForSwarm/swarm_ros_bridge/test/: a_simple_client.cpp  a_simple_server.cpp  md5test.cpp
ws_main/src/planner/ego_plannerv3/map_interface/: CMakeLists.txt  package.xml
ws_main/src/planner/exploration/active_perception/: CMakeLists.txt  package.xml
ws_main/src/planner/exploration/active_perception/src/: PoseGraph.cpp  frontier_finder.cpp  graph_node.cpp  hgrid.cpp  ikd_Tree.cpp  uniform_grid.cpp  viewpoint_handler.cpp
ws_main/src/planner/exploration/exploration_manager/: CMakeLists.txt  package.xml
ws_main/src/planner/exploration/exploration_manager/config/: default.rviz  swarm_real.rviz  traj.rviz  viewpoint.txt
ws_main/src/planner/exploration/exploration_manager/launch/: explore_para.yaml  simulator.xml
ws_main/src/planner/exploration/exploration_manager/scripts/: Instruction_pub.py  single_goal_chosen.py  swarm_info_pub.py
ws_main/src/planner/exploration/exploration_manager/src/: exploration_node.cpp  fast_exploration_fsm.cpp  fast_exploration_fsm_old.cpp  frontier_manager.cpp  planner_cmd_mux.cpp  (+2 more)
ws_main/src/planner/exploration/perception_utils/: CMakeLists.txt  package.xml
ws_main/src/planner/mission_fsm/: CMakeLists.txt  package.xml
ws_main/src/planner/mission_fsm/config/: default.rviz  explore_para.yaml
ws_main/src/planner/mission_fsm/include/: rc_fsm.h
ws_main/src/planner/mission_fsm/launch/: bridge_drone.launch  bridge_station.launch  object_cloud_test.launch  rviz.launch  simulator.xml  unity_sim_utils.launch
ws_main/src/planner/mission_fsm/scripts/: exp_data_disp.py  frame_tf.py
ws_main/src/planner/mission_fsm/src/: lidar_body2world.cpp  mission_node.cpp  rc_fsm.cpp  unity_time_sync.cpp
ws_main/src/planner/mission_fsm/test/: yolo_recv_test.cpp
ws_main/src/planner/scene_graph/: CMakeLists.txt  README.md  package.xml
ws_main/src/planner/scene_graph/msg/: EncodeMask.msg  PromptMsg.msg  WordVector.msg
ws_main/src/planner/scene_graph/prompts_definition/: area_choose_example.json  area_choose_realworld.txt  area_choose_syspt.txt  area_choose_syspt_backup1 copy.txt  area_choose_syspt_backup1.txt  benchmark_df_demo_syspt.txt  benchmark_expl_prediction_syspt.txt  benchmark_room_prediction_syspt.txt  benchmark_terminate_obj_id_syspt.txt  df_demo_syspt.txt  room_prediction.json  room_prediction_example.json  room_prediction_realworld.txt  room_prediction_syspt.txt  terminate_id_choose_syspt.txt
ws_main/src/planner/scene_graph/prompts_out/: new_area_prediction.json  room_prediction.json
ws_main/src/planner/scene_graph/scripts/: 1 copy.txt  1.txt  FunctionCallingTest.py  LLM_interface.py  LLM_interface_thread.py  LLM_interface_thread_local.py  bag_revis.py  guide_LLMInterface.md  pointcloud_accumulator.py  scene_graph_benchmark_README.md  scene_graph_benchmark_runner.py  yoloe_predict_server_realworld.py  yoloe_server.py
ws_main/src/planner/scene_graph/src/: cloud_fov_limit.cpp  ikd_Tree.cpp  object_factory.cpp  scene_graph.cpp  scene_graph_map_io.cpp  skeleton_astar.cpp  skeleton_cluster.cpp  skeleton_generation.cpp
ws_main/src/planner/scene_graph/test/: cloud_similarity_test.cpp  image_process_test.cpp  obj_test.cpp
ws_main/src/planner/scene_graph/tools/: README.md  scene_graph_snapshot_editor.py
ws_main/src/utils/quadrotor_msgs/: CMakeLists.txt  package.xml
ws_main/src/utils/quadrotor_msgs/msg/: AgentPrompt.msg  AnonymousBearingMeas.msg  DetectOut.msg  DistanceMeas.msg  Drift.msg  EgoGoalSet.msg  EgoPlannerResult.msg  FrontierMsg.msg  FtrPathArray.msg  FtrPointArray.msg  GPSPosition.msg  GoalSet.msg  HgridMsg.msg  Instruction.msg  InstructionResMsg.msg  MultiPoseGraph.msg  OccMap3d.msg  OccMap3dOld.msg  PerceptionMsg.msg  PolyTraj.msg  Px4ctrlDebug.msg  SwarmInfo.msg  TrackCommand.msg
ws_main/src/utils/traj_utils/: CMakeLists.txt
ws_main/src/utils/traj_utils/msg/: CarTraj.msg  FormationId.msg  LocalGoal.msg  LocalTime.msg  StatusData.msg  SteamdeckInfo.msg  SwarmGlobalPathList.msg  WayPointInfo.msg  YawCmd.msg  check_and_kill_once.msg  drone_die.msg  drone_state_to_steamdeck.msg  node_only_drone_node.msg  test.msg  to_drone_state.msg
ws_main/src/utils/traj_utils/src/: planning_visualization.cpp
ws_main/src/utils/waypoints/: CMakeLists.txt  package.xml
ws_main/src/utils/waypoints/launch/: main.launch
ws_main/src/utils/waypoints/src/: waypoint.cpp
(+1038 files in other folders)
