<?xml version="1.0"?>
<package format="2">
  <name>mission_fsm</name>
  <version>0.0.0</version>
  <description>The mission_fsm package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="gwq@todo.todo">gwq</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ego_planner</build_depend>
  <build_depend>map_interface</build_depend>
  <build_depend>scene_graph</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>message_filters</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>ego_planner</build_export_depend>
  <build_export_depend>scene_graph</build_export_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>ego_planner</exec_depend>
  <exec_depend>map_interface</exec_depend>
  <exec_depend>scene_graph</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>message_filters</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
