<?xml version="1.0"?>
<package format="2">
  <name>fake_planning</name>
  <version>0.0.0</version>
  <description>The fake_planning package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>quadrotor_msgs</depend>
  <depend>fake_mapping</depend>
  <depend>fake_traj_opt</depend>
  <depend>decomp_ros_utils</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>

</package>